examples/invalid/cont_var4.sv
module cont_var4;

logic a;

assign a = 0;

assign a = 1;

endmodule
